# GFX_Room

./: CMakeLists.txt  Makefile~  README~
gcc-build/: CMakeCache.txt  Makefile  cmake_install.cmake  pa1
models/: Cup.blend  Cup.blend1  Cup.blend2  cup.mtl  plane.mtl  pot.blend  pot.blend1  pot.blend2  pot.mtl  room.blend  room.blend1  room.mtl
src/: .bone.cpp.swp  .bone.hpp.swp  .common_header.h.swp  .goutputstream-EB8VCX  .importer.cpp.swp  .importer.hpp.swp  .main.cpp.swp  IKsolver.cpp  IKsolver.cpp~  IKsolver.hpp  IKsolver.hpp~  Makefile  Makefile~  bone.cpp  bone.cpp~  bone.hpp  bone.hpp~  common_header.h  common_header.h~  display.cpp  display.cpp~  display.h  display.h~  importer.cpp  importer.cpp~  importer.hpp  importer.hpp~  jacobian.hpp~  main.cpp  main.cpp~  node.cpp  node.cpp~  node.hpp  node.hpp~  pa1  pwn2107_WriteUp.txt  pwn2107_WriteUp.txt~  quaternion.hpp~  skeleton.hpp  skeleton.hpp~  (+4 more)
src/stash/: vectorR3.cpp  vectorR3.cpp~  vectorR3.hpp  vectorR3.hpp~
testing/: AirFountain.cpp  AirFountain.h  AirFountain.h~  Makefile  Vectors.h  camera.cpp  camera.h  camera.h~  main.cpp  main.cpp~  pool.cpp  pool.h  pool.h~  textures.cpp  textures.h  textures.h~  vectors.cpp
